log
Thu Apr 30 08:02:57 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/60
e4f9b69
Thu Apr 30 08:12:16 PM UTC 2026: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:127:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
  127 |         if(lower_than(aux -> pair -> key, aux -> parent -> pair -> key) == 1){
      |            ^~~~~~~~~~
e34495f
